package com.SWEII.Controllers.UsersControllers;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class NormalUserApiController {
}
