@startuml

title __USERSCONTROLLERS's Class Diagram__\n

  namespace com.SWEII {
    namespace Controllers.UsersControllers {
      class com.SWEII.Controllers.UsersControllers.AdminApiController {
      }
    }
  }
  

  namespace com.SWEII {
    namespace Controllers.UsersControllers {
      class com.SWEII.Controllers.UsersControllers.NormalUserApiController {
      }
    }
  }
  

  namespace com.SWEII {
    namespace Controllers.UsersControllers {
      class com.SWEII.Controllers.UsersControllers.StoreOwnerApiController {
      }
    }
  }
  

  namespace com.SWEII {
    namespace Controllers.UsersControllers {
      class com.SWEII.Controllers.UsersControllers.UserApiController {
          + getErrorMessage()
          + home()
          + listAllUsers()
          + sign_in()
          + userRegister()
      }
    }
  }
  

  com.SWEII.Controllers.UsersControllers.UserApiController o-- com.SWEII.Services.UsersServices.IUserServices : iUserServices
  com.SWEII.Controllers.UsersControllers.UserApiController o-- com.SWEII.Validators.UserValidator : userValidator


right footer

endfooter

@enduml
